# DoneDataHoarder

./: .gitignore  INSTALL.md  README.md  TEST_REPORT_2026_04_11.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_pipeline.py
.claude/: launch.json  settings.local.json
.github/workflows/: test.yml
datahoarder/: __init__.py  cli.py  config.py  executor.py  logging.py  phash.py
datahoarder/ai/: base_client.py  circuit_breaker.py  gemini_client.py  json_utils.py  ollama_client.py  provider.py  router.py
datahoarder/analyzers/: archive.py  base.py  document.py  image.py  pipeline.py  threedmodel.py  video.py
datahoarder/core/: context.py  dedup.py  enricher.py  jobs.py  relate.py  scanner.py  undo_log.py
datahoarder/db/: models.py  session.py
datahoarder/proposals/: namer.py  organizer.py  sequence_detector.py
datahoarder/web/: api.py  app.py  progress_utils.py  results_manager.py
datahoarder/web/static/: app.js  style.css
datahoarder/web/templates/: index.html
donedatahoarder/: __init__.py  cli.py  config.py  executor.py  logging.py  phash.py
donedatahoarder/ai/: base_client.py  gemini_client.py  json_utils.py  ollama_client.py  provider.py  router.py
donedatahoarder/analyzers/: archive.py  base.py  document.py  image.py  pipeline.py  threedmodel.py  video.py
donedatahoarder/core/: context.py  dedup.py  enricher.py  ignore.py  jobs.py  relate.py  scanner.py  undo_log.py
donedatahoarder/db/: models.py  session.py
donedatahoarder/proposals/: namer.py  organizer.py
donedatahoarder/web/: api.py  app.py
donedatahoarder/web/static/: app.js  style.css
donedatahoarder/web/templates/: index.html
scripts/: ai_automated_test_instructions.txt  test_runner.py
tests/: test_circuit_breaker.py  test_config.py  test_ddhignore.py  test_dedup_stem.py  test_jobs.py  test_json_utils.py  test_namer.py  test_organizer.py  test_phash.py  test_pipeline.py  test_scanner.py
