[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datahoarder"
version = "0.1.0"
description = "AI-powered file organization for data hoarders"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "pillow>=10.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dateutil>=2.9",
    "imagehash>=4.3",
    "exifread>=3.0",
    "mutagen>=1.47",
]

[project.optional-dependencies]
docs = [
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]
video = [
    "ffmpeg-python>=0.2",
    "faster-whisper>=1.0",
]
cloud = [
    "google-generativeai>=0.8",
]
magic = [
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "python-magic>=0.4.27; sys_platform != 'win32'",
]
all = ["datahoarder[docs,video,cloud,magic]"]

[project.scripts]
datahoarder = "datahoarder.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["datahoarder*"]
